objects/LLC_BI__Funding_Method_Type__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Category__c</fullName>
        <description>The administrator populates this required picklist field to determine Funding Method Type used. By default, it is blank.</description>
        <inlineHelpText>Select the type of funding for the account.</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Debit</fullName>
                </value>
                <value>
                    <fullName>ACH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Screen_Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional. The user manually populates this field. It relates a screen section to a funding method type.</description>
        <label>Screen Section</label>
        <referenceTo>nFORCE__Screen_Section__c</referenceTo>
        <relationshipLabel>Funding Method Types</relationshipLabel>
        <relationshipName>Funding_Method_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nPortal__Is_Portal_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this manually-populated field is selected, this Funding Method Type is displayed as a funding option for Online Deposit Account Opening in Customer Portal.</description>
        <inlineHelpText>Check this field to display this Funding Method Type in Customer Portal.</inlineHelpText>
        <label>Is Portal Enabled</label>
        <type>Checkbox</type>
    </fields>
    <label>Funding Method Type</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Funding Method Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funding Method Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>